# AK9PV

./: README.md
task1/: CMakeLists.txt  README.MD  main.cu  test
task2/: CMakeLists.txt  README.MD  main.cu
task3/: CMakeLists.txt  README.MD  main.cu
